# jlink-agent-core

./: README.md  SKILL.md  pyproject.toml
examples/: nfc_loop.sh
jlink_agent_core/: cli.py  jlink.py
profiles/: example-stm32h7.yaml
scripts/: install_openclaw_skill.sh  jlink_agent.py  jlink_nfc_ab.sh
skills/openclaw/jlink-debug/: SKILL.md
skills/openclaw/jlink-debug/references/: roadmap.md
skills/openclaw/jlink-debug/scripts/: jlink_nfc_ab.sh
