[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jlink-agent-core"
version = "0.1.0"
description = "Agent-friendly J-Link automation CLI for flashing, RTT, and GDB server control"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ylongwang" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Topic :: Software Development :: Embedded Systems",
]

[project.scripts]
jlink-agent = "jlink_agent_core.cli:main"

[tool.setuptools]
packages = ["jlink_agent_core"]
